--- a/entities/sensors/person/sarah_phone_battery.yaml
+++ b/entities/sensors/person/sarah_phone_battery.yaml
@@ -1,8 +1,8 @@
 ---
 platform: template
 sensors:
-  sarah_phone:
-    friendly_name: Sarah's phone
+  sarah_phone_battery:
+    friendly_name: Sarah's phone battery
     unit_of_measurement: "%"
     value_template: >-
       {%- if states.device_tracker.life360_sarah_boyd.attributes.battery %}
