--- a/lovelace/resources/resources.yaml
+++ b/lovelace/resources/resources.yaml
@@ -24,3 +24,5 @@
   type: module
 - url: /local/custom-lovelace/upcoming-media-card/upcoming-media-card.js?v=0.4.3
   type: js
+- url: /hacsfiles/battery-state-card/battery-state-card.js
+  type: module
