--- a/ui/configuration.yaml
+++ b/ui/configuration.yaml
@@ -20,6 +20,8 @@ most_used:
     name: Wax Melt
   - entity_id: sensor.globe_plug_2_power
     name: Ghost Cam
+  - entity_id: binary_sensor.young_pc_power_status
+    name: Media PC
 media:
   - name: Plex
     service: script.launch_plex
@@ -60,9 +62,9 @@ system_stats:
     entity_id: sensor.cpu_temperature
 media_server_system_stats:
   - name: CPU
-    entity_id: sensor.media_server_pc_cpu_usage
+    entity_id: sensor.young_pc_cpu_usage
   - name: RAM
-    entity_id: sensor.media_server_pc_ram_usage
+    entity_id: sensor.young_pc_ram_usage
   - name: Disk
     entity_id: sensor.media_drive_usage
 media_server_service_checker:
