--- a/automations/christmas/turn_off_christmas_automations.yaml
+++ b/automations/christmas/turn_off_christmas_automations.yaml
@@ -7,6 +7,6 @@ trigger:
 condition: []
 action:
   - service: automation.turn_off
-    entity_id: automation.turn_off_tree
+    entity_id: automation.turn_off_christmas_tree_when_we_both_leave
   - service: automation.turn_off
-    entity_id: automation.turn_on_tree
+    entity_id: automation.turn_on_christmas_tree_when_we_get_home
