--- a/lovelace/decluttering_templates/hk_button_ghost_cam.yaml
+++ b/lovelace/decluttering_templates/hk_button_ghost_cam.yaml
@@ -9,7 +9,7 @@ hk_button_ghost_cam:
     aspect_ratio: "[[aspect_ratio]]"
     tap_action:
       action: call-service
-      service: script.toggle_ghost_cam
+      service: script.toggle_globe_plug_2
     styles:
       grid:
         - grid-template-areas: '"i" "n" "s"'
