--- a/lovelace/decluttering_templates/hk_button_globe_1.yaml
+++ b/lovelace/decluttering_templates/hk_button_globe_1.yaml
@@ -9,7 +9,9 @@ hk_button_globe_1:
     aspect_ratio: "[[aspect_ratio]]"
     tap_action:
       action: call-service
-      service: script.toggle_globe_plug_1
+      service: script.toggle_globe_plug
+      service_data:
+        plug: "[[plug]]"
     styles:
       grid:
         - grid-template-areas: '"i" "n" "s"'
