--- a/automations/christmas/toggle_outside_light_automations_at_startup.yaml
+++ b/automations/christmas/toggle_outside_light_automations_at_startup.yaml
@@ -1,5 +1,5 @@
 ---
-alias: Set Christmas Tree automations at startup
+alias: Set Christmas Light automations at startup
 trigger:
   - platform: homeassistant
     event: start
