--- a/automations/christmas/toggle_outside_light_automations_at_startup.yaml
+++ b/automations/christmas/toggle_outside_light_automations_at_startup.yaml
@@ -8,5 +8,5 @@ condition:
     entity_id: input_boolean.christmas_lights
     state: "on"
 action:
-  - service: automations.trigger
+  - service: automation.trigger
     entity_id: automation.turn_off_outside_lights
