--- a/automations/christmas/toggle_christmas_automations_at_startup.yaml
+++ b/automations/christmas/toggle_christmas_automations_at_startup.yaml
@@ -8,5 +8,5 @@ condition:
     entity_id: input_boolean.christmas_automations
     state: "on"
 action:
-  - service: automations.trigger
+  - service: automation.trigger
     entity_id: automation.turn_on_christmas_automations
