--- a/automations/christmas/turn_off_outside_lights.yaml
+++ b/automations/christmas/turn_off_outside_lights.yaml
@@ -1,5 +1,6 @@
 ---
 alias: Turn off outside light automations when Christmas lights are up
+initial_state: false
 trigger:
   - entity_id: input_boolean.christmas_lights
     platform: state
