make sure the pc turns off (#26)
* make sure the pc turns off

* update these

* Delete nightly_shutdown.yaml

* Revert "Delete nightly_shutdown.yaml"

This reverts commit a2f94cebff368187cff58acfe317787f41ae6e94.

* Delete turn_off_when_not_used.yaml

* Update nightly_shutdown.yaml

* Update nightly_shutdown.yaml

* more changes

* lint

* Update nightly_shutdown.yaml

--- a/automations/media_server/turn_pc_off_at_night.yaml
+++ b/automations/media_server/turn_pc_off_at_night.yaml
@@ -10,5 +10,11 @@ condition:
   - condition: state
     entity_id: sensor.plex_ghost_s_media
     state: "0"
+  - condition: not
+    conditions:
+      - condition: state
+        entity_id: binary_sensor.young_pc_power_status
+        state: "unavailable"
 action:
-  service: script.media_server_shutdown
+  - service: script.media_server_shutdown
+  - service: script.media_server_media_server_nightly_shutdown
