--- a/scripts/media_server/launch_netflix.yaml
+++ b/scripts/media_server/launch_netflix.yaml
@@ -12,6 +12,8 @@ launch_netflix:
             - service: media_player.turn_on
               data:
                 entity_id: media_player.living_room_chromecast
+    - delay:
+        seconds: 30
     - service: media_player.select_source
       data:
         entity_id: media_player.living_room_chromecast
