--- a/automations/christmas/turn_on_tree_in_morning.yaml
+++ b/automations/christmas/turn_on_tree_in_morning.yaml
@@ -16,7 +16,10 @@ trigger:
     to: 'on'
     for:
       minutes: 20
-condition: []
+condition:
+  - condition: state
+    entity_id: sensor.globe_plug_3_power
+    state: "off"
 action:
   - service: script.toggle_globe_plug
     data:
