--- a/automations/christmas/turn_on_tree_in_morning.yaml
+++ b/automations/christmas/turn_on_tree_in_morning.yaml
@@ -20,6 +20,9 @@ condition:
   - condition: state
     entity_id: sensor.globe_plug_3_power
     state: "OFF"
+  - condition: time
+    after: '06:00:00'
+    before: '11:00:00'
 action:
   - service: script.toggle_globe_plug
     data:
