--- a/automations/christmas/turn_off_tree_at_night.yaml
+++ b/automations/christmas/turn_off_tree_at_night.yaml
@@ -8,7 +8,7 @@ trigger:
 condition:
   - condition: state
     entity_id: sensor.globe_plug_3_power
-    state: "on"
+    state: "ON"
   - condition: state
     entity_id: media_player.living_room_chromecast
     state: "off"
