--- a/automations/christmas/turn_off_tree_at_night.yaml
+++ b/automations/christmas/turn_off_tree_at_night.yaml
@@ -9,6 +9,12 @@ condition:
   - condition: state
     entity_id: sensor.globe_plug_3_power
     state: "ON"
+  - condition: state
+    entity_id: media_player.living_room_chromecast
+    state: "off"
+  - condition: time
+    after: "21:00:00"
+    before: "02:00:00"
 action:
   - service: script.toggle_globe_plug
     data:
