--- a/automations/christmas/turn_on_tree_in_morning.yaml
+++ b/automations/christmas/turn_on_tree_in_morning.yaml
@@ -19,7 +19,7 @@ trigger:
 condition:
   - condition: state
     entity_id: sensor.globe_plug_3_power
-    state: "off"
+    state: "OFF"
   - condition: time
     after: '06:00:00'
     before: '11:00:00'
