--- a/lovelace/decluttering_templates/hk_button_globe_plug.yaml
+++ b/lovelace/decluttering_templates/hk_button_globe_plug.yaml
@@ -43,3 +43,5 @@ hk_button_globe_plug:
             - filter: opacity(50%)
           icon:
             - filter: grayscale(100%)
+      - value: "ON"
+        color: rgb(35, 63, 166)
