add in new switch and remove hue bulbs from automations (#33)
* add in new switch and remove hue bulbs from automations

* Update turn_on_before_work.yaml

--- a/automations/lights/outside/turn_off_at_2am.yaml
+++ b/automations/lights/outside/turn_off_at_2am.yaml
@@ -5,5 +5,5 @@ trigger:
     platform: time
 condition: []
 action:
-  service: homeassistant.turn_off
-  entity_id: light.outside
+  service: switch.turn_off
+  entity_id: switch.front_porch_sconces
