--- a/automations/lights/outside/turn_off_when_home.yaml
+++ b/automations/lights/outside/turn_off_when_home.yaml
@@ -7,7 +7,7 @@ trigger:
     from: unlocked
 condition:
   - condition: state
-    entity_id: light.outside
+    entity_id: switch.front_porch_sconces
     state: "on"
   - condition: or
     conditions:
