--- a/automations/lights/outside/turn_off_at_sunrise.yaml
+++ b/automations/lights/outside/turn_off_at_sunrise.yaml
@@ -6,5 +6,5 @@ trigger:
     # offset: "-00:05:00"
 condition: []
 action:
-  service: homeassistant.turn_off
-  entity_id: light.outside
+  service: switch.turn_off
+  entity_id: switch.front_porch_sconces
