--- a/scripts/lights_delay.yaml
+++ b/scripts/lights_delay.yaml
@@ -4,5 +4,5 @@ turn_lights_off_delay:
   alias: 'Turn outdoor lights off after 30 minutes'
   sequence:
     - delay: '00:30:00'
-    - service: homeassistant.turn_off
-      entity_id: light.outside
+    - service: switch.turn_off
+      entity_id: switch.front_porch_sconces
