New pi setup (#35)
* Delete badnest.yaml

* Delete badnest.yaml

* change path

* Update offpeak_rate.yaml

* disable climate automations

* remove bad nest

* Delete climate.yaml

* Delete pi_hole.yaml

* Create restoreConfigNotes.md

* Update resources.yaml

* change back to hacs

* add other repos

* make docs folder

* disable climate automation

* adguard

--- a/entities/sensors/hydro/midpeak_rate.yaml
+++ b/entities/sensors/hydro/midpeak_rate.yaml
@@ -2,4 +2,4 @@
 
 platform: command_line
 name: MidPeak Hydro Rate
-command: "cat /home/homeassistant/.homeassistant/hydro_rates/midpeak"
+command: "cat hydro_rates/midpeak"
