--- a/entities/sensors/hydro/offpeak_rate.yaml
+++ b/entities/sensors/hydro/offpeak_rate.yaml
@@ -2,4 +2,4 @@
 
 platform: command_line
 name: OffPeak Hydro Rate
-command: "cat /home/homeassistant/.homeassistant/hydro_rates/offpeak"
+command: "cat hydro_rates/offpeak"
