--- a/entities/sensors/hydro/onpeak_rate.yaml
+++ b/entities/sensors/hydro/onpeak_rate.yaml
@@ -2,4 +2,4 @@
 
 platform: command_line
 name: OnPeak Hydro Rate
-command: "cat /home/homeassistant/.homeassistant/hydro_rates/onpeak"
+command: "cat hydro_rates/onpeak"
