--- a/lovelace/views/04_network.yaml
+++ b/lovelace/views/04_network.yaml
@@ -79,12 +79,12 @@
       cards:
         - !include
           - ../includes/section.yaml
-          - title: "PiHole"
+          - title: "AdGuard"
 
         - type: entities
           entities:
-            - sensor.pi_hole_ads_blocked_today
-            # add switch to turn off pi_hole
+            - sensor.adguard_dns_queries
+            - sensor.adguard_dns_queries_blocked_ratio
 
     - type: vertical-stack
       cards:
