--- a/automations/lights/outside/turn_on_after_dark.yaml
+++ b/automations/lights/outside/turn_on_after_dark.yaml
@@ -6,7 +6,7 @@ trigger:
   to: unlocked
 condition:
   - condition: state
-    entity_id: switch.front_porch_sconces
+    entity_id: switch.front_porch_lights
     state: "off"
   - condition: or
     conditions:
@@ -17,4 +17,4 @@ condition:
         before_offset: "-00:30:00"
 action:
   service: switch.turn_on
-  entity_id: switch.front_porch_sconces
+  entity_id: switch.front_porch_lights
