--- a/automations/lights/outside/turn_on_when_away.yaml
+++ b/automations/lights/outside/turn_on_when_away.yaml
@@ -27,4 +27,4 @@ condition:
         before_offset: "-01:00:00"
 action:
   service: switch.turn_on
-  entity_id: switch.front_porch_sconces
+  entity_id: switch.front_porch_lights
