--- a/automations/wax_melter/turn_on_wax_melter_afternoon.yaml
+++ b/automations/wax_melter/turn_on_wax_melter_afternoon.yaml
@@ -6,9 +6,9 @@ trigger:
 condition:
   - condition: state
     entity_id: group.family
-    state: "not_home"
+    state: "home"
 action:
   - service: mqtt.publish
     data:
       topic: cmnd/globeplug1/Power
-      payload: "Om"
+      payload: "On"
